Fix top menu layout on narrow screens (#1)

--- a/static/output.css
+++ b/static/output.css
@@ -548,6 +548,12 @@ video {
   width: 100%;
 }
 
+@media (min-width: 550px) {
+  .container {
+    max-width: 550px;
+  }
+}
+
 @media (min-width: 640px) {
   .container {
     max-width: 640px;
@@ -934,10 +940,6 @@ video {
   max-width: 28rem;
 }
 
-.flex-1 {
-  flex: 1 1 0%;
-}
-
 .flex-none {
   flex: none;
 }
@@ -950,12 +952,20 @@ video {
   flex-shrink: 1;
 }
 
+.shrink-0 {
+  flex-shrink: 0;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
 
 .grow {
   flex-grow: 1;
+}
+
+.basis-1\/3 {
+  flex-basis: 33.333333%;
 }
 
 .table-auto {
@@ -2795,6 +2805,12 @@ video {
     width: 100%;
   }
 
+  @media (min-width: 550px) {
+    .sm\:container {
+      max-width: 550px;
+    }
+  }
+
   @media (min-width: 640px) {
     .sm\:container {
       max-width: 640px;
@@ -2893,6 +2909,20 @@ video {
   outline-color: #4f46e5;
 }
 
+@media not all and (min-width: 550px) {
+  .max-xs\:order-last {
+    order: 9999;
+  }
+
+  .max-xs\:basis-full {
+    flex-basis: 100%;
+  }
+
+  .max-xs\:justify-around {
+    justify-content: space-around;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:mt-20 {
     margin-top: 5rem;
@@ -2904,6 +2934,10 @@ video {
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:flex-nowrap {
+    flex-wrap: nowrap;
   }
 
   .sm\:gap-x-6 {
